Release 0.1, Camera with Mojave permissions